--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <header>
         <nav>
-        <a href="./index.html">Web
-        Studio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li><a href="./index.html">Studio</a></li>
             <li><a href="">Portfolio</a></li>
@@ -78,8 +77,7 @@
     </section>
     </main>
     <footer>
-        <a href="./index.html">Web
-            Studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>
         Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
