--- a/index.html
+++ b/index.html
@@ -4,81 +4,122 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="./index.html">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+        <a class="logo" href="./index.html">Web<span class="logo-color">Studio</span></a>
+        <ul class="header-list">
+            <li class="header-list-item"><a class="list-item-link" href="./index.html">Studio</a></li>
+            <li class="header-list-item"><a class="list-item-link" href="">Portfolio</a></li>
+            <li class="header-list-item"><a class="list-item-link" href="">Contacts</a></li>
         </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="address">
+            <ul class="addres-list">
+                <li class="addres-item"><a class="addres-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="addres-item"><a class="addres-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions
         for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="hero-btn" type="button">Order Service</button>
     </section>
-    <section>
-        <h2>Benefits</h2>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-            <p>Our goal is to identify the business
+    <section class="about-features">
+        <h2 class="features-title">Our Features</h2>
+        <ul class="features-list">
+            <li class="features-item">
+                <h3 class="features-hero">Strategy</h3>
+            <p class="features-text">Our goal is to identify the business
             problem to walk away with the perfect and creative solution.</p>
         </li>
-        <li>
-            <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        <li class="features-item">
+            <h3 class="features-hero">Punctuality</h3>
+            <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
-        <li>
-            <h3>Diligence</h3>
-            <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+        <li class="features-item">
+            <h3 class="features-hero">Diligence</h3>
+            <p class="features-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li>
-            <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <li class="features-item">
+            <h3 class="features-hero">Technologies</h3>
+            <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
         </ul>
     </section>
+    <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+            <li class="team-item">
+            <img src="./images/team3.jpg" alt="Mark Guerrero" height="260" width="264">
+            <h3 class="team-hero">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p> 
+            </li>
+            <li class="team-item">
+                <img src="./images/team1.jpg" alt="Tom Ford" height="260" width="264">
+                <h3 class="team-hero">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+                <img src="./images/team4.jpg" alt="Camila Garcia" height="260" width="264">
+                <h3 class="team-hero">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+                <img src="./images/team2.jpg" alt="Daniel Wilson" height="260" width="264">
+                <h3 class="team-hero">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+            </li>
+        </ul>
+    </section>
     <section>
-        <h2>Our Team</h2>
+        <h2 class="about-portfolio">Our Portfolio</h2>
         <ul>
             <li>
-            <img src="./images/team3.jpg" alt="Mark Guerrero" height="260" width="264">
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p> 
+                <img src="./images/portfolio1.jpg" alt="Banking App" height="300px" width="360px">
+                <h3>Banking App</h3>
+                <p>App</p>
             </li>
             <li>
-                <img src="./images/team1.jpg" alt="Tom Ford" height="260" width="264">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/team4.jpg" alt="Camila Garcia" height="260" width="264">
-                <h3>Camila Garcia</h3>
+                <img src="./images/portfolio2.jpg" alt="Cashless Payment" height="300px" width="360px">
+                <h3>Cashless Payment</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/team2.jpg" alt="Daniel Wilson" height="260" width="264">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <img src="./images/portfolio3.jpg" alt="Meditation App" height="300px" width="360px">
+                <h3>Meditation App</h3>
+                <p>App</p>
+            </li>
+            <li>
+                <img src="./images/portfolio4.jpg" alt="Taxi Service" height="300px" width="360px">
+                <h3>Taxi Service</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/portfolio5.jpg" alt="Screen Illustrations" height="300px" width="360px">
+                <h3>Screen Illustrations</h3>
+                <p>Design</p>
+            </li>
+            <li>
+                <img src="./images/portfolio6.jpg" alt="Online Courses" height="300px" width="360px">
+                <h3>Online Courses</h3>
+                <p>Marketing</p>
             </li>
         </ul>
     </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
+    <footer class="footer">
+        <a class="footer-link" href="./index.html">Web<span class="link-color">Studio</span></a>
+        <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
