--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header class="header">
         <nav>
@@ -81,38 +84,38 @@
             </li>
         </ul>
     </section>
-    <section>
-        <h2 class="about-portfolio">Our Portfolio</h2>
-        <ul>
-            <li>
-                <img src="./images/portfolio1.jpg" alt="Banking App" height="300px" width="360px">
-                <h3>Banking App</h3>
-                <p>App</p>
+    <section class="about-portfolio">
+        <h2 class="portfolio-hero">Our Portfolio</h2>
+        <ul class="portfolio-list">
+            <li class="portfolio-item">
+                <img src="./images/portfolio1.jpg" alt="Banking App" height="300" width="360">
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-text">App</p>
             </li>
-            <li>
-                <img src="./images/portfolio2.jpg" alt="Cashless Payment" height="300px" width="360px">
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
+            <li class="portfolio-item">
+                <img src="./images/portfolio2.jpg" alt="Cashless Payment" height="300" width="360">
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
             </li>
-            <li>
-                <img src="./images/portfolio3.jpg" alt="Meditation App" height="300px" width="360px">
-                <h3>Meditation App</h3>
-                <p>App</p>
+            <li class="portfolio-item">
+                <img src="./images/portfolio3.jpg" alt="Meditation App" height="300" width="360">
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-text">App</p>
             </li>
-            <li>
-                <img src="./images/portfolio4.jpg" alt="Taxi Service" height="300px" width="360px">
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
+            <li class="portfolio-item">
+                <img src="./images/portfolio4.jpg" alt="Taxi Service" height="300" width="360">
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
             </li>
-            <li>
-                <img src="./images/portfolio5.jpg" alt="Screen Illustrations" height="300px" width="360px">
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
+            <li class="portfolio-item">
+                <img src="./images/portfolio5.jpg" alt="Screen Illustrations" height="300" width="360">
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
             </li>
-            <li>
-                <img src="./images/portfolio6.jpg" alt="Online Courses" height="300px" width="360px">
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
+            <li class="portfolio-item">
+                <img src="./images/portfolio6.jpg" alt="Online Courses" height="300" width="360">
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
             </li>
         </ul>
     </section>
