Fix footer logo typography and clean up portfolio selectors

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </ul>
         </nav>
         <address class="address">
-            <ul class="addres-list">
-                <li class="addres-item"><a class="addres-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="addres-item"><a class="addres-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="address-list">
+                <li class="address-item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-item"><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
